# hncli

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/src/: app.rs  config.rs  errors.rs  main.rs  ui.rs
app/src/app/: state.rs
app/src/ui/: common.rs  router.rs  screens.rs  utils.rs
app/src/ui/components/: common.rs  item_comments.rs  item_details.rs  navigation.rs  settings.rs  widgets.rs
app/src/ui/components/item_comments/: comment_widget.rs
app/src/ui/displayable_item/: user.rs
app/src/ui/screens/: home.rs
app/src/ui/stories/: renderer.rs
src/: api.rs  app.rs  config.rs  errors.rs  main.rs  ui.rs
src/api/: algolia_client.rs  algolia_types.rs  client.rs  cookies.rs  types.rs
src/app/: history.rs  state.rs
src/ui/: common.rs  components.rs  displayable_algolia_item.rs  displayable_item.rs  flash.rs  handlers.rs  help.rs  helper.rs  router.rs  screens.rs  stories.rs  theme.rs  utils.rs
src/ui/components/: common.rs  help.rs  help_search.rs  item_comments.rs  item_details.rs  item_summary.rs  login.rs  navigation.rs  options.rs  search.rs  settings.rs  stories.rs  thread.rs  user_profile.rs  widgets.rs
src/ui/components/item_comments/: comment.rs  comment_widget.rs  common.rs  corpus_widget.rs  nested_component.rs  top_component.rs  widget.rs
src/ui/components/search/: algolia_help.rs  algolia_input.rs  algolia_list.rs  algolia_tags.rs
src/ui/components/widgets/: custom_list.rs  story_header.rs  text_input.rs
src/ui/displayable_item/: user.rs
src/ui/screens/: help.rs  help_search.rs  home.rs  login.rs  nested_comments.rs  search.rs  search_help.rs  settings.rs  story.rs  sub_comments.rs  user.rs
src/ui/stories/: renderer.rs
src/ui/utils/: breakpoints.rs  debouncer.rs  loader.rs
website/: .editorconfig  .prettierrc  .yarnrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
website/src/: ambient.d.ts  app.css
website/src/lib/: AsciinemaDemoPlayer.svelte  Button.svelte  ExternalLink.svelte  Footer.svelte  Header.svelte
website/src/lib/content/: ClipboardCommandLines.svelte  Contribute.svelte  FeatureCard.svelte  FeatureFocus.svelte  Features.svelte  FeaturesFocus.svelte  Hero.svelte  HeroBackgroundIllustration.svelte  HeroTitle.svelte  Installation.svelte
website/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
website/src/utils/: index.ts
website/static/: demo.cast
