[package]
name = "hncli"
version = "0.1.0"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2024"
categories = ["command-line-utilities"]
description = "A modern TUI for browsing Hacker News."
homepage = "https://www.hncli.newstackwhodis.com/"
license = "MIT"
repository = "https://github.com/pierreyoda/hncli"

[profile.release]
strip = true    # strip symbols from binary
opt-level = "z" # optimize for binary size
lto = true      # enable Link Time Optimization

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
directories = "6.0.0"
futures = "0.3.31"
html2text = "0.15.5"
log = "0.4.28"
num-traits = "0.2.19"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = { version = "0.9.8", features = ["serde"] }
unicode-width = "0.2.0"
url = "2.5.7"
webbrowser = "1.0.6"
